# little-opencv-code

./: CMakeLists.txt  README.md  main.cpp
resources/: file.cfg
src/: CMakeLists.txt
src/imageStitch/: imageStitch.cpp  imageStitch.hpp
src/util/: proc.cpp  util.cpp  util.hpp
